app/index.css
:root {
	--index-vertical-menu-text: #2d3c4b;
	--index-vertical-menu-text-hover: #1b252e;
}
html {
	margin: 0px;
  padding: 0px;
	background: url("../img/index_background.png");
}
body {
	font-family: "Open Sans", sans;
	text-align: center;
	color: white;
	/* width: 600px; */
	margin: 0px auto;
	padding: 0px;
	position: relative;
	font-size: 16px;
}
.introHeader {
	text-align:center;
	color: white;
	margin: 0px;
	padding: 50px 70px;
	height: 460px;
}
.myName {
	font-size: 70px;
	font-weight: 600;
	letter-spacing: -5px;
	color: #c8c8c8;
	padding: 100px 0px 0px 0px;
}
.mySurname {
	font-size: 70px;
	font-weight: 700;
	letter-spacing: -5px;
	color: #ffffff;
	margin: 0px;
	padding: 0px;
}
.web2 {
	font-size: 14px;
	font-weight: 400;
	letter-spacing: -1px;
	word-spacing: 10px;
	padding: 0px 0px 0px 0px;
}
.menu {
	position: fixed;
	bottom: 0px;
	width: 100%;
	margin: 0;
	padding: 0;
	height: 350px;
}
.SvgMenu {
	font-size: 25px;
	font-weight: 400;
}
.SvgMenu:hover path {
	cursor: pointer;
	fill: rgba(255, 255, 255, 0.9);
}
.SvgMenu:hover .verticalTextHidden {
	opacity: 1;
}
.SvgMenu .verticalText {
	cursor: pointer;
	fill: var(--index-vertical-menu-text)
}
.SvgMenu .verticalTextHidden {
	opacity: 0;
	cursor: pointer;
	transition: opacity 0.1s ease-in-out 0s;
}

/* --- LANGUAGE ---------------------------------------------- */
.language-container {
	margin: 0px -45px;
	position: fixed;
	left: 50%;
	right: 50%;
	bottom: 30px;
	z-index: 9999;
}
.language {
	font-size: 15px;
	font-weight: 600;
	margin: 0;
	line-height: 10px;
	width: 90px;
	height: 40px;
}
.language h1 {
	font-size: 13px;
	font-weight: 600;
	margin: 0px auto;
}
.language h2 {
	font-size: 20px;
	font-weight: 600;
	margin: 10px auto;
	padding: 0px;
}


/* --- LINKS ----------------------------------------------- */
.language-container span:link {
	text-decoration:none;
	color: #ffffff;
}
.language-container span:visited {
	text-decoration:none;
	color: #ffffff;
}
.language-container span:hover {
	text-decoration:none;
	color: #2d3c4b;
	text-decoration: blink;
	cursor: pointer;
}


/* --- NAVBAR ---------------------------------------------- */
.navBar {
	display: flex;
  justify-content: center;
	flex-wrap: wrap;
	background-color: black;
}
.navBar .navBarLeft,
.navBar .navBarRight {
	margin: 10px;
}


/* --- TAGS. Closed  --------------------------------------- */

.academiaTagContainer, .experienceTagContainer { position: absolute }
.academiaTagContainer   { left:  0 }
.experienceTagContainer { right: 0 }
.academiaTag, .experienceTag {
	position: absolute;
	z-index: 1000;
}
.academiaTag   { left:  0 }
.experienceTag { right: 0 }

.academiaTagClosed,
.experienceTagClosed {
	font-family: 'Open Sans', sans;
	position: relative;
	width: 40px;
	height: 40px;
	border-radius: 30px;
	border: solid 4px #2d3c4b;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-ms-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
.academiaTagClosed img,
.experienceTagClosed img {
	width: 30px;
	position: absolute;
	top: 5px;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-ms-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
.academiaTagClosed   img { left: 5px }
.experienceTagClosed img { right: 5px }

.academiaTagClosed   .tagTray{
	position: relative;
	margin: 0 21.35px 0 25px;
	width: 90%;
}
.experienceTagClosed .tagTray {
	position: relative;
	margin: 0 25px 0 21.35px;
	width: 90%;
}
.academiaTagClosed h1   {
	text-align: right;
	padding: 6px 25px 2px 65px;
}
.experienceTagClosed h1 {
	text-align: left;
	padding: 6px 65px 2px 25px;
}
.academiaTagClosed h1,
.experienceTagClosed h1 {
	font-size: 106%;
	font-weight: 800;
	letter-spacing: -1px;
	word-spacing: 0px;
	line-height: 4px;
	color: rgba(255,255,255,0.9);
	opacity: 0;
	-webkit-transition: all 0.1s ease-in-out;
	-moz-transition: all 0.1s ease-in-out;
	-ms-transition: all 0.1s ease-in-out;
	-o-transition: all 0.1s ease-in-out;
	transition: all 0.1s ease-in-out;
}

.academiaTagClosed h2   {text-align: right }
.experienceTagClosed h2 {text-align: left }
.academiaTagClosed h2,
.experienceTagClosed h2 {
	font-size: 81%;
	letter-spacing: -1px;
	word-spacing: 1px;
	font-weight: 400;
	line-height: 0px;
	color: rgba(255,255,255,0.6);
	opacity: 0;
	padding: 0px 25px 0px 25px;
	-webkit-transition: all 0.1s ease-in-out;
	-moz-transition: all 0.1s ease-in-out;
	-ms-transition: all 0.1s ease-in-out;
	-o-transition: all 0.1s ease-in-out;
	transition: all 0.1s ease-in-out;
}

.academiaTagClosed h3,
.academiaTagClosed p,
.experienceTagClosed h3,
.experienceTagClosed p {
	font-size: 62.5%;
	font-weight: 400;
	margin: 0;
	padding: 5px 0px 0px 0px;
}

.academiaTagClosed h3,
.experienceTagClosed h3 {
  opacity: 0;
	-webkit-transition: all 0.1s ease-in-out;
	-moz-transition: all 0.1s ease-in-out;
	-ms-transition: all 0.1s ease-in-out;
	-o-transition: all 0.1s ease-in-out;
	transition: all 0.1s ease-in-out;
}
.academiaTagClosed   h3 { text-align: right }
.experienceTagClosed h3 { text-align: left  }

.academiaTagClosed p,
.experienceTagClosed p {
	text-align: left;
  opacity: 0;
  z-index: 1000;
	-webkit-transition: all 0.1s ease-in-out;
	-moz-transition: all 0.1s ease-in-out;
	-ms-transition: all 0.1s ease-in-out;
	-o-transition: all 0.1s ease-in-out;
	transition: all 0.1s ease-in-out;
}
.academiaTagClosed   p { text-align: left  }
.experienceTagClosed p { text-align: right }

/* --- TAGS. Open ------------------------------------------ */

.academiaTagOpen {
	border-radius: 30px 30px 70px 30px;
}
.experienceTagOpen {
	border-radius: 30px 30px 30px 70px;
}
.academiaTagOpen,
.experienceTagOpen {
	position: relative;
	width: 435px;
	height: 140px;
  box-shadow:
		1px 1px 3px rgba(0,0,0,0.2),
		0px 0px 0px 5px rgba(188,188,188,0.5);
	-webkit-transition:
    width 0.25s ease-in-out,
    left 0.25s ease-in-out,
    box-shadow 0.25s ease-in-out,
    height 0.5s ease-in-out 0.4s,
		border-radius 0.8s ease-in-out 0.7s;
  -moz-transition:
    width 0.25s ease-in-out,
    left 0.25s ease-in-out,
    box-shadow 0.25s ease-in-out,
    height 0.5s ease-in-out 0.4s,
		border-radius 0.8s ease-in-out 0.7s;
  -ms-transition:
    width 0.25s ease-in-out,
    left 0.25s ease-in-out,
    box-shadow 0.25s ease-in-out,
    height 0.5s ease-in-out 0.4s,
		border-radius 0.8s ease-in-out 0.7s;
  -o-transition:
    width 0.25s ease-in-out,
    left 0.25s ease-in-out,
    box-shadow 0.25s ease-in-out,
    height 0.5s ease-in-out 0.4s,
		border-radius 0.8s ease-in-out 0.7s;
  transition:
    width 0.25s ease-in-out,
    left 0.25s ease-in-out,
    box-shadow 0.25s ease-in-out,
    height 0.5s ease-in-out 0.4s,
		border-radius 0.8s ease-in-out 0.7s;
}
.academiaTagOpen img,
.experienceTagOpen img {
	width: 45px;
	top: 7px;
	-webkit-transition:
		left 0.25s ease-in-out 0s,
		width 0.4s ease-in-out 0.5s,
		top 0.2s ease-in-out 0.5s;
	-moz-transition:
		left 0.25s ease-in-out 0s,
		width 0.4s ease-in-out 0.5s,
		top 0.2s ease-in-out 0.5s;
	-ms-transition:
		left 0.25s ease-in-out 0s,
		width 0.4s ease-in-out 0.5s,
		top 0.2s ease-in-out 0.5s;
	-o-transition:
		left 0.25s ease-in-out 0s,
		width 0.4s ease-in-out 0.5s,
		top 0.2s ease-in-out 0.5s;
	transition:
		left 0.25s ease-in-out 0s,
		width 0.4s ease-in-out 0.5s,
		top 0.2s ease-in-out 0.5s;
}
.academiaTagOpen   img { left:  10px }
.experienceTagOpen img { right: 10px }

.academiaTagOpen   h1 {
	opacity: 1;
	padding: 12px 25px 2px 65px;
	-webkit-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	-moz-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	-ms-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	-o-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
}
.experienceTagOpen h1 {
	opacity: 1;
	padding: 12px 65px 2px 25px;
	-webkit-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	-moz-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	-ms-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	-o-transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
	transition:
		opacity 0.7s ease 0.1s,
		padding 0.5s ease 0.5s;
}

.academiaTagOpen h2,
.experienceTagOpen h2 {
	opacity: 1;
	-webkit-transition: opacity 0.2s ease-in-out 0.8s;
  -moz-transition:    opacity 0.2s ease-in-out 0.8s;
  -ms-transition:     opacity 0.2s ease-in-out 0.8s;
  -o-transition:      opacity 0.2s ease-in-out 0.8s;
  transition:         opacity 0.2s ease-in-out 0.8s;
}
.academiaTagOpen   h2 { text-align: right }
.experienceTagOpen h2 { text-align: left  }

.academiaTagOpen h3,
.experienceTagOpen h3 {
  opacity: 1;
  -webkit-transition: opacity 0.4s ease 0.9s;
  -moz-transition: opacity 0.4s ease 0.9s;
  -ms-transition: opacity 0.4s ease 0.9s;
  -o-transition: opacity 0.4s ease 0.9s;
  transition: opacity 0.4s ease 0.9s;
}
.academiaTagOpen p,
.experienceTagOpen p {
	opacity: 1;
	-webkit-transition: opacity 0.4s ease 1.1s;
  -moz-transition: opacity 0.4s ease 1.1s;
  -ms-transition: opacity 0.4s ease 1.1s;
  -o-transition: opacity 0.4s ease 1.1s;
  transition: opacity 0.4s ease 1.1s;
}
.academiaTagOpen .tagTray,
.experienceTagOpen .tagTray {
	-webkit-transition: all 0.25s ease-in-out;
  -moz-transition: all 0.25s ease-in-out;
  -ms-transition: all 0.25s ease-in-out;
  -o-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

/* --- ACADEMIA BAR ---------------------------------------- */

.timelineContainer {
	position: relative;
	max-width: 980px;
	margin: auto;
	margin-top: 20px;
}
/* the class below might not be necessary! */
.bars {
	position: absolute;
	top: 0px;
	bottom: 0px;
	right: 0px;
	left: 0px;
}
.years {
	position: absolute;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	z-index: 0;
}
.year {
	background: #2d3c4b;
	border: 3px solid rgba(0, 0, 0, 0.15);
	border-radius: 15px;
	text-align: left;
	box-sizing: border-box;
}
.yearTag {
	color: rgba(255, 255, 255, 0.2);
	font-size: 105%;
	font-weight: 700;
	letter-spacing: -.8px;
	margin: 8px 0 0 12px;
}
.academia {
	position: absolute;
	top: 0px;
	left: 0px;
	right: 50%;
	bottom: 0px;
	z-index: 0;
}
.academiaBar {
	display: block;
	margin: 0 0 0 auto;
	z-index: 10;
}
.experience {
	position: absolute;
	top: 0px;
	left: 50%;
	right: 0px;
	bottom: 0px;
	z-index: 0;
}
.experienceBar {
	display: block;
	margin: 0 auto 0 0;
	z-index: 10;
}



/* --- SMALL SCREEN VIEW --------------------------------- */
.smallView {
	padding: 25px;
	font-size: 200%;
}
.smallView a:link,
.smallView a:active,
.smallView a:hover,
.smallView a:visited {
	text-decoration: none;
	color: white;
}

